[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crescent-filer"
version = "0.1.0"
description = "Cargo Arrival Manifest filer for Crescent Harbor Direct Filer protocol"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.29",
    "jsonschema>=4.23,<5",
    "referencing>=0.35,<0.37",
    "pydantic[email]>=2.9,<3",
    "typer>=0.12,<0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
crescent-filer = "crescent_filer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
